<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidMVPSample</string>
    <string name="action_settings">Settings</string>
    <string name="id_hint">id</string>
    <string name="first_name_hint">first name</string>
    <string name="last_name_hint">last name</string>
    <string name="load_button">load</string>
    <string name="save_button">save</string>

</resources>