<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CustomerActivity" >

    <EditText
        android:id="@+id/id_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/id_hint"
        android:inputType="number"
        android:singleLine="true" />

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:singleLine="true" />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id_edit_text"
        android:layout_below="@+id/first_name_edit_text"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:singleLine="true" />

    <Button
        android:id="@+id/load_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name_edit_text"
        android:layout_below="@+id/last_name_edit_text"
        android:layout_marginTop="60dp"
        android:text="@string/load_button" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/load_button"
        android:layout_alignBottom="@+id/load_button"
        android:layout_alignRight="@+id/last_name_edit_text"
        android:text="@string/save_button" />

</RelativeLayout>